@@ -19,6 +19,7 @@ ENH: Ticket#676 - Updated ActiveRecord Oracle Drives (Qiang)
 ENH: Ticket#678 - Improved DateTimeFormatInfo performance (Stever)
 ENH: Ticket#681 - TUrlMapping can construct custom URLs now (Qiang)
 ENH: Ticket#692,700 - Added support to wildcard in pages configuration; added IP filters in auth rules. (Qiang)
+ENH: Ticket#709 - Added TDbCache.ConnectionID (Qiang)
 ENH: Added THead requirement check (Qiang)
 ENH: Added TOutputCache.CacheTime (Qiang)
 ENH: Added "remember login" support to TAuthManager and the related modules/classes (Qiang)
